--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4.0.0
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
@@ -23,9 +25,9 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
       - name: install frontend dependencies
-        run: npm install
+        run: pnpm install
       - name: build tauri app
-        run: npm run tauri build
+        run: pnpm run tauri build
       - name: upload artifact
         uses: actions/upload-artifact@v3
         with:
@@ -41,6 +43,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4.0.0
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
@@ -48,9 +52,9 @@ jobs:
           cache-all-crates: "true"
           shared-key: "windows"
       - name: install frontend dependencies
-        run: npm install
+        run: pnpm install
       - name: build tauri app
-        run: npm run tauri build
+        run: pnpm run tauri build
       - name: upload artifact
         uses: actions/upload-artifact@v3
         with:
