--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -13,6 +13,8 @@ jobs:
           node-version: 20
       - name: Setup pnpm
         uses: pnpm/action-setup@v4.0.0
+        with:
+          version: 9.x
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
