--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,8 @@ jobs:
           node-version: 20
       - name: Setup pnpm
         uses: pnpm/action-setup@v4.0.0
+        with:
+          version: 9.x
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
@@ -45,6 +47,8 @@ jobs:
           node-version: 20
       - name: Setup pnpm
         uses: pnpm/action-setup@v4.0.0
+        with:
+          version: 9.x
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
