--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@solidjs/router": "^0.15.2",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
+    "solid-heroicons": "^3.2.4",
     "solid-js": "^1.9.3"
   },
   "devDependencies": {
