--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,20 +18,22 @@ jobs:
           version: 9.x
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
+      - run: cd src-tauri
       - uses: Swatinem/rust-cache@v2
         with:
           cache-all-crates: "true"
           shared-key: "ubuntu"
+      - run: cd ..
       - name: install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
+          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
       - name: install frontend dependencies
         run: pnpm install
       - name: build tauri app
         run: pnpm run tauri build
       - name: upload artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4.6.0
         with:
           name: linux
           path: src-tauri/target/release/bundle/appimage/jpxs-launcher_0.1.0_amd64.AppImage
@@ -51,16 +53,18 @@ jobs:
           version: 9.x
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
+      - run: cd src-tauri
       - uses: Swatinem/rust-cache@v2
         with:
           cache-all-crates: "true"
           shared-key: "windows"
+      - run: cd ..
       - name: install frontend dependencies
         run: pnpm install
       - name: build tauri app
         run: pnpm run tauri build
       - name: upload artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4.6.0
         with:
           name: windows
           path: src-tauri\target\release\bundle\nsis\jpxs-launcher_0.1.0_x64-setup.exe
