--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -17,12 +17,11 @@ jobs:
           version: 9.x
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
-      - run: cd src-tauri
       - uses: Swatinem/rust-cache@v2
         with:
           cache-all-crates: "true"
+          workspaces: "./src-tauri -> target"
           shared-key: "mac"
-      - run: cd ..
       - name: install frontend dependencies
         run: pnpm install
       - name: build tauri app
