--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,12 +18,11 @@ jobs:
           version: 9.x
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
-      - run: cd src-tauri
       - uses: Swatinem/rust-cache@v2
         with:
+          workspaces: "./src-tauri -> target"
           cache-all-crates: "true"
           shared-key: "ubuntu"
-      - run: cd ..
       - name: install dependencies
         run: |
           sudo apt-get update
@@ -57,6 +56,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           cache-all-crates: "true"
+          workspaces: "./src-tauri -> target"
           shared-key: "windows"
       - run: cd ..
       - name: install frontend dependencies
