--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,4 +26,6 @@ tauri-plugin-dialog = "2"
 reqwest = "0.12.12"
 zip-extensions = "0.8.1"
 futures-util = "0.3.31"
+thiserror = "2.0.11"
+zip = "2.2.2"
 
