--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tauri-apps/api": "^2.2.0",
     "@tauri-apps/plugin-dialog": "~2.2.0",
     "@tauri-apps/plugin-opener": "^2.2.3",
+    "@tauri-apps/plugin-updater": "~2",
     "solid-heroicons": "^3.2.4",
     "solid-js": "^1.9.4"
   },
