--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,70 +1,57 @@
+name: "build"
+
 on:
   push:
   workflow_dispatch:
+
 jobs:
-  build-tauri-ubuntu:
+  publish-tauri:
     permissions:
       contents: write
-    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - platform: "ubuntu-24.04" # for Tauri v1 you could replace this with ubuntu-20.04.
+            args: ""
+          - platform: "windows-latest"
+            args: ""
+
+    runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v4
+
       - name: setup node
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: lts/*
+
+      - name: install Rust stable
+        uses: dtolnay/rust-toolchain@stable
+
       - name: Setup pnpm
         uses: pnpm/action-setup@v4.0.0
         with:
           version: 9.x
-      - name: install Rust stable
-        uses: dtolnay/rust-toolchain@stable
+
       - uses: Swatinem/rust-cache@v2
         with:
           workspaces: "./src-tauri -> target"
           cache-all-crates: "true"
-          shared-key: "ubuntu"
-      - name: install dependencies
+          shared-key: ${{matrix.platform}}
+      - name: install dependencies (ubuntu only)
+        if: matrix.platform == 'ubuntu-24.04' # This must match the platform value defined above.
         run: |
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
+
       - name: install frontend dependencies
         run: pnpm install
-      - name: build tauri app
-        run: pnpm run tauri build
-      - name: upload artifact
-        uses: actions/upload-artifact@v4.6.0
+
+      - uses: tauri-apps/tauri-action@v0
+        env:
+          TAURI_SIGNING_PRIVATE_KEY: ${{secrets.TAURI_SIGNING_PRIVATE_KEY}}
         with:
-          name: linux
-          path: src-tauri/target/release/bundle/appimage/jpxs-launcher_0.1.0_amd64.AppImage
-  build-tauri-windows:
-    permissions:
-      contents: write
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: setup node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4.0.0
-        with:
-          version: 9.x
-      - name: install Rust stable
-        uses: dtolnay/rust-toolchain@stable
-      - run: cd src-tauri
-      - uses: Swatinem/rust-cache@v2
-        with:
-          cache-all-crates: "true"
-          workspaces: "./src-tauri -> target"
-          shared-key: "windows"
-      - run: cd ..
-      - name: install frontend dependencies
-        run: pnpm install
-      - name: build tauri app
-        run: pnpm run tauri build
-      - name: upload artifact
-        uses: actions/upload-artifact@v4.6.0
-        with:
-          name: windows
-          path: src-tauri\target\release\bundle\nsis\jpxs-launcher_0.1.0_x64-setup.exe
+          includeUpdaterJson: true
+          updaterJsonPreferNsis: true
+          args: ${{ matrix.args }}
