--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,7 @@ name: "publish"
 
 on:
   release:
+    types: [published]
   workflow_dispatch:
 
 jobs:
@@ -43,7 +44,7 @@ jobs:
         if: matrix.platform == 'ubuntu-24.04' # This must match the platform value defined above.
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchel
+          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
 
       - name: install frontend dependencies
         run: pnpm install
@@ -57,7 +58,7 @@ jobs:
           updaterJsonPreferNsis: true
           tagName: jpxs-launcher-v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version.
           releaseName: "JPXS Launcher v__VERSION__"
-          releaseBody: "See the assets to download this version and install."
+          releaseBody: ${{github.event.release.body}}
           releaseDraft: false
           prerelease: false
           args: ${{ matrix.args }}
