--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,7 +56,7 @@ jobs:
         with:
           includeUpdaterJson: true
           updaterJsonPreferNsis: true
-          tagName: jpxs-launcher-v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version.
+          tagName: v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version.
           releaseName: "JPXS Launcher v__VERSION__"
           releaseBody: ${{github.event.release.body}}
           releaseDraft: false
