--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "jpxs-launcher"
-version = "0.3.0"
+version = "0.4.0"
 description = "A Launcher for Sub Rosa Free Weekend versions."
 authors = ["you"]
 edition = "2021"
@@ -29,6 +29,7 @@ futures-util = "0.3.31"
 thiserror = "2.0.11"
 zip = "2.2.2"
 open = "5.3.2"
+fs_extra = "1.3.0"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-updater = "2"
