--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,4 +60,4 @@ jobs:
       - uses: actions/upload-artifact@v4.6.0
         with:
           name: artifacts
-          path: ${{steps.artifacts.outputs.artifactPaths}}
+          path: src-tauri/target/release/bundle/
