--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "jpxs-launcher"
-version = "0.4.1"
+version = "0.4.2"
 description = "A Launcher for Sub Rosa Free Weekend versions."
 authors = ["you"]
 edition = "2021"
@@ -30,7 +30,16 @@ thiserror = "2.0.11"
 zip = "2.2.2"
 open = "5.3.2"
 fs_extra = "1.3.0"
+sysinfo = "0.34.2"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-updater = "2"
 
+[profile.dev]
+incremental = true # Compile your binary in smaller steps.
+
+[profile.release]
+codegen-units = 1 # Allows LLVM to perform better optimization.
+lto = true # Enables link-time-optimizations.
+opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
+strip = true # Ensures debug symbols are removed.
