--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,6 +30,7 @@ thiserror = "2.0.11"
 zip = "2.2.2"
 open = "5.3.2"
 fs_extra = "1.3.0"
+sysinfo = "0.34.2"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-updater = "2"
