--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tauri-apps/plugin-dialog": "~2.2.1",
     "@tauri-apps/plugin-opener": "^2.2.6",
     "@tauri-apps/plugin-updater": "~2.7.0",
+    "fuse.js": "^7.1.0",
     "solid-heroicons": "^3.2.4",
     "solid-js": "^1.9.5"
   },
